[package]
authors = ['GalacticCouncil']
edition = '2021'
license = 'Apache 2.0'
name = "hydra-dx-wasm"
repository = 'https://github.com/galacticcouncil/hydradx-wasm'
version = "5.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
serde-aux = "4.2.0"
sp-arithmetic = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "stable2409-patch2", default-features = false }
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-node", rev="2ab7bb6305e2b60522a4a88a7291e82266557478"}
num-traits = {default-features = false, version = "0.2.14"}
# Added because of use of the FixedU128, used to implement `Ratio`
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
sp-core ={ git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "stable2409-patch2", default-features = false }
sp-runtime  = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "stable2409-patch2", default-features = false }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["std"]
std = [ "sp-arithmetic/std", "sp-runtime/std"]
xyk = []
lbp = []
stableswap = []
stableswap-drift = []
liquidity-mining = []
omnipool = []
ema = []
staking = []
